[package]
name = "sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
api-forge = { git = "https://github.com/retrokiller543/api-forge.git" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.87"
tracing = "0.1.40"
thiserror = "1.0.63"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }